syntax = "proto3";

option csharp_namespace = "gRPCToolFrontEnd";

service ClientInstances
{ 
	rpc CreateClientInstance(CreateClientInstanceRequest) returns (CreateClientInstanceResponse);
	rpc StreamClientInstances(stream StreamClientInstanceRequest) returns (CreateClientInstanceResponse);
}

message CreateClientInstanceRequest
{ 
	string username = 1;
	string SessionUnique = 2;
}

message CreateClientInstanceResponse
{ 
	string SessionUnique = 1; 
	string TimeOfClientCreation = 2;
}

message StreamClientInstanceRequest
{ 
	string clientUnique = 1;
}

message StreamClientInstanceResponse
{ 
	bool state = 1;
}


